# miniature-train

./: README.md
ArduinoPacMan/: myassets.h  pacman.ino
School_Assignments/lab-env-master/: Unit_Footman.constants  ps.txt  ps_Graphics.txt  vs.txt  vs_Graphics.txt
School_Assignments/lab-env-master/engine/render/: window.cc  window.h
School_Assignments/lab-env-master/projects/S0008E_Lab1-Skeleton/: CMakeLists.txt
School_Assignments/lab-env-master/projects/S0008E_Lab1-Skeleton/code/: MathLibrary.h  Skeleton.cpp  exampleapp.cc  exampleapp.h  main.cc
School_Assignments/lab-env-master/projects/S0008E_Lab2-Animation/: CMakeLists.txt
School_Assignments/lab-env-master/projects/S0008E_Lab2-Animation/code/: Animation.cpp  Animation.h  MathLibrary.h  Skeleton.cpp  Skeleton.h  exampleapp.cc  exampleapp.h
School_Assignments/lab-env-master/projects/S0008E_Lab3-Skinning/: CMakeLists.txt
School_Assignments/lab-env-master/projects/S0008E_Lab3-Skinning/code/: Animation.cpp  Animation.h  DDS_TYPES.h  MathLibrary.h  MeshResource.cpp  MeshResource.h  Shader.h  ShaderObject.cc  ShaderObject.h  Skeleton.cpp  Skeleton.h  Skinning.cpp  Skinning.h  VertexComponent.cpp  VertexComponent.h  exampleapp.cc  exampleapp.h
School_Assignments/lab-env-master/projects/S0009D_Physics/: CMakeLists.txt
School_Assignments/lab-env-master/projects/S0009D_Physics/code/: CollisionHandler.cpp  CollisionHandler.h  Cube.cpp  Cube.h  GraphicsNode.cc  GraphicsNode.h  LightNode.cc  LightNode.h  MathLibrary.h  MeshResource.cpp  MeshResource.h  RigidBody.cpp  RigidBody.h  ShaderObject.cc  ShaderObject.h  TextureResource.cc  TextureResource.h  Vector2D.cc  Vector2D.hpp  exampleapp.cc  exampleapp.h  main.cc  stb_image.h
SideProjects/: DungeonGenerator.lua
